corrected spacing and flexboxes

--- a/src/Components/AboutUs/about.css
+++ b/src/Components/AboutUs/about.css
@@ -4,6 +4,7 @@
     font-family: 'Tajawal', sans-serif;
     color: red;
     background-color: lightgray;
+    background-size: auto;
     padding-top: 50px;
     padding-bottom: 100px;
     
